--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-select": "^5.8.0",
     "react-square-web-payments-sdk": "^3.2.1",
     "square": "^28.0.1",
     "tailwindcss": "3.3.2",
