--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
+    "crypto": "^1.0.1",
+    "dayjs": "^1.11.11",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "firebase": "^9.22.0",
@@ -32,6 +35,8 @@
     "square": "^28.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "yup": "^1.1.1"
   }
 }
