--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^4.8.0",
     "react-select": "^5.8.0",
     "react-square-web-payments-sdk": "^3.2.1",
