--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-square-web-payments-sdk": "^3.2.1",
     "square": "^28.0.1",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.0.4",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
