--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
+    "chakra-multiselect": "^0.4.13",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.11",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "firebase": "^9.22.0",
     "formik": "^2.2.9",
-    "framer-motion": "^10.12.10",
+    "framer-motion": "^10.18.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
