--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "square/squareFunctions.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "square/squareFunctions.js", "components/square-utils/customAttribute.js"],
   "exclude": ["node_modules"]
 }
