--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@sendgrid/mail": "^8.1.4",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -30,6 +31,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^4.8.0",
     "react-select": "^5.8.0",
@@ -41,5 +43,8 @@
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.9"
   }
 }
